--- a/allevents.css
+++ b/allevents.css
@@ -147,7 +147,7 @@ nav .links, .nav-links {
 #circle1 {
     width: 130%;
     height: 130%;
-    background-color: #f0685c;
+    background-color: #f88b81;
     top: -50%;
     left: -60%;
     animation-delay: -1s;
@@ -156,7 +156,7 @@ nav .links, .nav-links {
 #circle2 {
     width: 150%;
     height: 150%;
-    background-color: #46b4ad;
+    background-color: #99f1ec;
     top: 300px;
     left: 10%;
     animation-delay: -2.5s;
@@ -165,7 +165,7 @@ nav .links, .nav-links {
 #circle3 {
     width: 130%;
     height: 130%;
-    background-color: #27265e;
+    background-color: #4f4e95;
     top: -40%;
     left: 55px;
     animation-delay: -4.5s;
@@ -174,9 +174,27 @@ nav .links, .nav-links {
 #circle4 {
     width: 100%;
     height: 100%;
-    background-color: #244c9d;
+    background-color: #466dbd;
     top: 50%;
     left: -25%;
+    animation-delay: -4.5s;
+}
+
+#circle5 {
+    width: 50%;
+    height: 50%;
+    background-color: #e2ecff;
+    top: 50%;
+    left: -25%;
+    animation-delay: -4.5s;
+}
+
+#circle6 {
+    width: 50%;
+    height: 50%;
+    background-color: #e2ecff;
+    top: 10%;
+    left: 60%;
     animation-delay: -4.5s;
 }
 
